stylesheet.css
html,
body {
  background-color: lightblue;
  height: 100%;
  width: 100%;
  max-height: 100%;
  max-width: 100%;
  margin: 0px;
}

#container {
  display: grid;
  grid-template-areas:
    "result image-picker image-picker"
    "result image-picker image-picker"
    "description video-picker video-picker";
  height: 100%;
  grid-template-rows: 40% 40% 20%;
  grid-template-columns: 40% auto auto;
}

#description {
  display: flex;
  align-items: center;
  justify-content: center;
  grid-area: description;
  margin: 25px;
  border-radius: 10px;
  text-align: center;
  color: grey;
  font-size: 2vw;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  font-weight: bold;
  padding: 50px;
}

#result {
  display: flex;
  align-items: center;
  justify-content: center;
  grid-area: result;
  background-color: lightblue;
  border-radius: 10px;
  margin: 20px;
}

.result-video {
  outline: none;
  background-size: 100% 100%;
  height: 100%;
  max-width: 100%;
  max-height: 100%;
  border-radius: 20px;
}

#video-picker {
  display: flex;
  grid-area: video-picker;
  border-radius: 10px;
  overflow: scroll;
  direction: ltr;
  background-color: whitesmoke;
  margin: 20px;
}

.source-video {
  width: 30%;
  height: auto;
  background-color: whitesmoke;
}

#image-picker {
  grid-area: image-picker;
  display: flex;
  flex-wrap: wrap;
  background-color: whitesmoke;
  padding: 12px 24px;
  border-radius: 10px;
  overflow: scroll;
  margin: 20px;
  align-items: center;
}

.image {
  border-radius: 30px;
  margin: 2.5%;
  vertical-align: middle;
  min-width: 20%;
  max-width: 200px;
  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4); */
  cursor: pointer;
}

.emojiImage,
.image {
  transition: 0.5s;
}

.emojiImage:hover,
.image:hover,
.selected {
  filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
  transition: 0.5s;
}

.emojiImage {
  display: flex;
  margin-top: 20px;
  margin-bottom: 20px;
  margin-right: 20px;
  margin-left: 40px;
}
.emojiImage:focus {
  outline: none;
  box-shadow: none;
}

#addImage {
  display: inline;
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: stretch;
  font-family: "Lucida Console", monospace;
  font-size: 90px;
  color: rgb(100, 100, 100);
  min-width: 20%;
  max-width: 500px;
}
#demo {
  display: inline;
}

.image-container {
  position: relative;
  width: 50%;
  max-width: 300px;
}

.overlay {
  position: absolute;
  bottom: 0;
  background: rgb(0, 0, 0);
  background: rgba(0, 0, 0, 0.5); /* Black see-through */
  color: #f1f1f1;
  width: 100%;
  transition: 0.5s ease;
  opacity: 0;
  color: white;
  font-size: 20px;
  padding: 20px;
  text-align: center;
}

.processing {
  border-radius: 30px;
  margin: 2.5%;
  vertical-align: middle;
  max-width: 200px;
  height: 250px;
  opacity: 0.2;
}

@media only screen and (max-width: 600px) {
  #container {
    display: grid;
    grid-template-areas:
      "result result result"
      "image-picker image-picker image-picker"
      "video-picker video-picker video-picker";
    height: 100%;
    width: 100%;
    grid-template-rows: 55% 30% 15%;
  }

  #image-picker {
    padding: 12px 0px;
  }
  .image {
    max-width: 150px;
  }
  #addImage {
    max-width: 150px;
  }
  .result-video {
    width: auto;
    height: auto;
    align-self: center;
    justify-self: center;
  }
}

